# atlasfetch

./: DOCS.md  README.md  build.rs  flake.nix
.github/workflows/: release.yml
atlas-core/: Cargo.toml
atlas-core/src/: eventbus.rs  state.rs
atlas-core/src/backend/: winit.rs
atlas-space/src/: lib.rs
atlasfetch/: README.md  atlasfetch
logos/: adelie  aeon  aerynos  afterglow  almalinux  alpine2  alpine2_small  altlinux  amazon_linux  amiga  amogos  android  anduinos  antergos  anushos  aoscos  aoscosretro  aoscosretro_small  aperture  arch3  arch_old  archcraft  arkane  armbian  arya  asahi  asahi2  asteroidos  astra_linux  athenaos  athenaos_old  aurora  azos  azurelinux  azurelinux2  bedrock  bedrock_small  biglinux  blackarch  blackmesa  (+212 more)
scripts/: update-atlasfetch.sh
src/: ascii.rs  cli.rs  config.rs  info.rs  layout.rs  layout_engine.rs  main.rs  mobile.rs  render.rs  theme.rs  widget.rs
src/component/: ascii.rs  companion.rs  mod.rs  monitor.rs  system.rs
src/tui/: app.rs  editor.rs  mobile.rs  mod.rs
