[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atlas-space = { path = "../atlas-space" }
smithay = { path = "/tmp/opencode/smithay", features = [
    "backend_winit",
    "wayland_frontend",
    "renderer_gl",
    "desktop",
] }
tracing = "0.1"
